reu subdense suite

--- a/Docs/Misc/20251104_ProjectMeeting/in_progress.tex
+++ b/Docs/Misc/20251104_ProjectMeeting/in_progress.tex
@@ -157,48 +157,65 @@
 
 \begin{frame}[fragile]{An agent-based model of stakeholder dynamics in suburban densification}
 
-\vspace{-0.3cm}
 {\footnotesize Raimbault J., Perret J., Götze V.; \textbf{target journal:} JASSS; \textbf{submission planned:} June 2026; \textbf{progress: } 10\% (120MH remaining), presented at JR-IGN-ENSG 2025.}
 
-\begin{columns}
-\begin{column}{0.7\linewidth}
 
-\begin{center}
-	\includegraphics[width=\linewidth]{figures/Annotator.png}
-\end{center}
+\vspace{0.5cm}
 
 
-\end{column}
-\begin{column}{0.4\linewidth}
-
-	\textit{An open web application to produce ground-truth datasets for matching}
+\textit{Simulation of densification dynamics with behaviouraln modelling for several stakeholders}
 	
 	\medskip
 	
 	\textbf{Contributions}
 	
-	$\rightarrow$ web app to annotate matching links
+	$\rightarrow$ stylised simulation of complex densification dynamics
 	
-	$\rightarrow$ proof-of-concept of a ``serverless'' deployment with user input through git
+	$\rightarrow$ parametrised on synthetic cities and real data
+	
+	$\rightarrow$ integrates SimPLU3d and ParcelManager as submodels
 	
 	\medskip
 	
 	\textbf{Takeways}
 	
-	$\rightarrow$ ground-truth datasets to optimise the matching algorithm
+	$\rightarrow$ automatic exploration of planning scenarii
 	
-	$\rightarrow$ git feedback architecture to be integrated into the dashboard
-
-\end{column}
-\end{columns}
+	$\rightarrow$ optimisation of SDGs linked to densification
 
 \end{frame}
 
 
- (suite de JRIGN 2024, target JASSS)
+
+\begin{frame}[fragile]{Plot-based quantification and simulation of suburban densification}
+
+{\footnotesize Colomb M., Raimbault J., Perret J.; \textbf{target journal:} Geographical Analysis; \textbf{submission planned:} March 2026; \textbf{progress: } 40\% (60MH remaining).}
+
+
+\vspace{0.5cm}
+
+
+\textit{Simulation of potential plot splits with the ParcelManager model and comparison with actual dynamics for France (Strasbourg and Toulouse)}
+	
+	\medskip
+	
+	\textbf{Contributions}
+	
+	$\rightarrow$ densification potential based on plots
+	
+	$\rightarrow$ calibration of ParcelManager
+	
+	\medskip
+	
+	\textbf{Takeways}
+	
+	$\rightarrow$ comparison with actual densification dynamics in terms of buildings
+
+\end{frame}
 
 
 
+% SimPLU: benchmark runs many countries? visu 3d simulation outputs
 
 
 \end{document}
